# Data-Structures-and-Algorithms-with-Python

./: README.md  Short notes on Memory Management.ipynb  pyproject.toml
Algorithms/: Dynamic Programming.ipynb
Data Structures/: Arrays.ipynb
Data Structures/Linear/: Arrays.ipynb  LinkedLists.ipynb  Stacks, Queues and DQueues.ipynb  Strings.ipynb
Data Structures/Non-Linear/: Heap and Priority Queues.ipynb
