[tool.poetry]
name = "data-structures-and-algorithms-with-python"
version = "0.1.0"
description = ""
authors = ["Manuel Ángel Suárez <mas@innaxis.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<=4.0"
pydantic = "^2.0.3"
mypy = "^1.4.1"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
